--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </select>
 
   <!-- زر التحليل -->
-  <button onclick="analyzeImage()">🔍 تحليل الصورة</button>
+<button id="analyzeBtn">🔍 تحليل الصورة</button>
 
   <!-- زر التحديث اليدوي -->
   <button id="refreshBtn" onclick="manualRefresh()">🔄 تحديث يدوي</button>
@@ -287,5 +287,54 @@
     aiStatus.insertAdjacentHTML('beforeend', `<div>🔁 تم تحديث الذكاء في: ${now}</div>`);
   }
 </script>
+<!-- استدعاء aiModules.js بنظام ES Modules -->
+<script type="module">
+  import { aiModules } from './aiModules.js';  // تأكد من المسار النسبي الصحيح
+
+  // 1. تهيئة كل مكون مفعّل
+  aiModules.forEach(mod => {
+    if (mod.enabled && typeof mod.init === 'function') {
+      mod.init();
+    }
+  });
+
+  // 2. دالة لتشغيل جميع المحللات بعد OCR
+  async function runAllAnalyzers(context) {
+    const outputs = {};
+    for (let mod of aiModules) {
+      if (mod.enabled && typeof mod.analyze === 'function') {
+        try {
+          const out = await mod.analyze(context);
+          outputs[mod.name] = out;
+        } catch (err) {
+          console.error(`Error in ${mod.name}`, err);
+        }
+      }
+    }
+    return outputs;
+  }
+
+  // 3. ربط مع زر التحليل (تأكد من وجود id="analyzeBtn")
+  document.getElementById('analyzeBtn').addEventListener('click', async () => {
+    // استخراج الملف واللعبة من الواجهة
+    const file = document.getElementById('imageInput').files[0];
+    const game = document.getElementById('gameSelect').value;
+    if (!file || !game) return alert('اختر صورة ولعبة أولاً!');
+
+    // 4. استدعاء Vision AI أولاً لاستخراج النص
+    const vision = aiModules.find(m => m.name === "Vision AI");
+    const { text } = await vision.analyze({ file });
+
+    // 5. ثم استدعاء باقي المكونات
+    const allResults = await runAllAnalyzers({ file, text, game });
+    console.log("🧩 All AI results:", allResults);
+
+    // 6. مثلاً عرض النص المستخرج وبعض النتائج البسيطة
+    document.getElementById('result').innerHTML = `
+      <b>النص:</b> ${text.slice(0,200)}...<br>
+      <b>Pattern AI:</b> ${allResults["Pattern AI"].patterns.join(", ")}
+    `;
+  });
+          </script>
 </body>
 </html>
